--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name"            : "TaKo",
-  "version"         : "1.1.4",
+  "version"         : "1.2.1 (Anakin)",
   "description"     : "Mobile Apps Web Framework",
   "homepage"        : "http://takojs.com",
   "author"          : "Iñigo Gonzalez Vazquez <ingonza85@gmail.com> (@haas85)",
